# json-subscriber

./: CHANGELOG.md  Cargo.toml  FUNDING.yml  LICENSE  README.md  deny.toml  release-plz.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yaml  ci.yaml  realease-plz.yaml
benches/: bunyan.rs  operations.rs  tracing_subscriber.rs
benches/support/: mod.rs
dev/bench/: data.js
docs/: benchmark.md
examples/: bunyan.rs  custom-from-event-or-span.rs  custom-static-and-dynamic-fields.rs  readme-opentelemetry.rs  tracing-subscriber-json-example.rs  tracing-subscriber-readme-2.rs  tracing-subscriber-readme.rs
examples/yak_shave/: mod.rs
src/: builder.rs  bunyan.rs  cached.rs  cursor.rs  event.rs  field_writer.rs  fields.rs  fmt.rs  layer.rs  lib.rs  serde.rs  tests.rs  value.rs  visitor.rs  write_adaptor.rs
src/fmt/: builder.rs  layer.rs  mod.rs  names.rs
src/layer/: compatibility.rs  custom.rs  event.rs  mod.rs
src/serde/: mod.rs  tracing_serde.rs
