[package]
name = "json-subscriber"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracing-log = ["tracing-subscriber/tracing-log", "dep:tracing-log"]
env-filter = ["tracing-subscriber/env-filter"]
opentelemetry = ["dep:tracing-opentelemetry", "dep:opentelemetry"]

[dependencies]
serde = "1.0.202"
serde_json = "1.0.117"

tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-core = { version = "0.1.32", default-features = false }
tracing-log = { version = "0.2.0", default-features = false, optional = true }
tracing-serde = { version = "0.1.3", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "std",
    "registry",
    "fmt",
] }

# OpenTelemetry
tracing-opentelemetry = { version = "0.24.0", default-features = false, optional = true }
opentelemetry = { version = "0.23.0", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.3.6", default-features = false }
snafu = "0.6.10"
thiserror = "1.0.31"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["json"] }

opentelemetry_sdk = { version = "0.23.0", default-features = false }
opentelemetry-stdout = "0.4"

[lib]
bench = false

[[bench]]
name = "tracing_subscriber"
harness = false
